# dynamic_weights_conv2d_trt_plugin

./: CMakeLists.txt  dynamic_weights_conv2d.py  main.cpp  model.onnx
include/: trt_plugin.h  utils.h
src/: trt_plugin.cpp
